chore: updated swagger
